// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defaults > is the all-OFF baseline (snapshot) 1`] = `
{
  "autoIncrement": false,
  "cancelQueries": false,
  "collation": false,
  "collations": false,
  "comment": false,
  "connectionSchema": false,
  "dataTypes": [],
  "database": false,
  "databaseEdit": false,
  "defaultDatabase": null,
  "defaultPort": null,
  "defaultUser": null,
  "definer": false,
  "elementsWrapper": "",
  "engines": false,
  "exportByChunks": false,
  "fileConnection": false,
  "foreignActions": [],
  "foreigns": false,
  "functionAdd": false,
  "functionContext": false,
  "functionDataAccess": false,
  "functionDeterministic": false,
  "functionLanguage": false,
  "functionSettings": false,
  "functionSql": null,
  "functions": false,
  "indexTypes": [],
  "indexes": false,
  "languages": null,
  "nullable": false,
  "nullablePrimary": false,
  "onUpdate": false,
  "operators": [
    "=",
    "!=",
    ">",
    "<",
    ">=",
    "<=",
    "IN",
    "NOT IN",
    "LIKE",
    "NOT LIKE",
    "BETWEEN",
    "IS NULL",
    "IS NOT NULL",
  ],
  "parametersLength": false,
  "procedureContext": false,
  "procedureContextValues": [],
  "procedureDataAccess": false,
  "procedureDeterministic": false,
  "procedureLanguage": false,
  "procedureSql": null,
  "processesList": false,
  "readOnlyMode": false,
  "routineAdd": false,
  "routineSettings": false,
  "routines": false,
  "schedulerAdd": false,
  "schedulerSettings": false,
  "schedulers": false,
  "schemaDrop": false,
  "schemaEdit": false,
  "schemaExport": false,
  "schemaImport": false,
  "schemas": false,
  "singleConnectionMode": false,
  "sortableFields": false,
  "sshConnection": false,
  "sslConnection": false,
  "stringsWrapper": """,
  "systemSchemas": [],
  "tableAdd": false,
  "tableArray": false,
  "tableCheck": false,
  "tableDdl": false,
  "tableDuplicate": false,
  "tableRealCount": false,
  "tableSettings": false,
  "tableTruncateDisableFKCheck": false,
  "tables": false,
  "triggerAdd": false,
  "triggerEnableDisable": false,
  "triggerFunctionAdd": false,
  "triggerFunctionSettings": false,
  "triggerFunctionSql": null,
  "triggerFunctionlanguages": null,
  "triggerFunctions": false,
  "triggerMultipleEvents": false,
  "triggerOnlyRename": false,
  "triggerSettings": false,
  "triggerSql": null,
  "triggerStatementInCreation": false,
  "triggerTableInName": false,
  "triggerUpdateColumns": false,
  "triggers": false,
  "unsigned": false,
  "usersManagement": false,
  "variables": false,
  "viewAdd": false,
  "viewAlgorithm": false,
  "viewSettings": false,
  "viewSqlSecurity": false,
  "viewUpdateOption": false,
  "views": false,
  "zerofill": false,
}
`;

exports[`per-client customization snapshots (.NET contract) > snapshot for maria 1`] = `
{
  "autoIncrement": true,
  "cancelQueries": true,
  "collation": true,
  "collations": true,
  "comment": true,
  "connectionSchema": true,
  "dataTypes": [
    {
      "group": "integer",
      "types": [
        {
          "collation": false,
          "length": 4,
          "name": "TINYINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "SMALLINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "INT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "MEDIUMINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "BIGINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "BIT",
          "unsigned": true,
          "zerofill": true,
        },
      ],
    },
    {
      "group": "float",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "FLOAT",
          "scale": true,
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "DOUBLE",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DECIMAL",
          "scale": true,
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "string",
      "types": [
        {
          "collation": true,
          "length": true,
          "name": "CHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "VARCHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "TINYTEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "MEDIUMTEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "TEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "LONGTEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "JSON",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "binary",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "BINARY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "VARBINARY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "TINYBLOB",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "BLOB",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MEDIUMBLOB",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "LONGBLOB",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "time",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "DATE",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "TIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "YEAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DATETIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "TIMESTAMP",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "spatial",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "POINT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "LINESTRING",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "POLYGON",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "GEOMETRY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MULTIPOINT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MULTILINESTRING",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MULTIPOLYGON",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "GEOMCOLLECTION",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "other",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "ENUM",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "SET",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "unknown",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "UNKNOWN",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
  ],
  "database": false,
  "databaseEdit": false,
  "defaultDatabase": null,
  "defaultPort": 3306,
  "defaultUser": "root",
  "definer": true,
  "elementsWrapper": "\`",
  "engines": true,
  "exportByChunks": true,
  "fileConnection": false,
  "foreignActions": [
    "RESTRICT",
    "CASCADE",
    "SET NULL",
    "NO ACTION",
  ],
  "foreigns": true,
  "functionAdd": true,
  "functionContext": false,
  "functionDataAccess": true,
  "functionDeterministic": true,
  "functionLanguage": false,
  "functionSettings": true,
  "functionSql": "BEGIN

END",
  "functions": true,
  "indexTypes": [
    "PRIMARY",
    "INDEX",
    "UNIQUE",
    "FULLTEXT",
  ],
  "indexes": true,
  "languages": null,
  "nullable": true,
  "nullablePrimary": false,
  "onUpdate": true,
  "operators": [
    "=",
    "!=",
    ">",
    "<",
    ">=",
    "<=",
    "IN",
    "NOT IN",
    "LIKE",
    "NOT LIKE",
    "RLIKE",
    "NOT RLIKE",
    "BETWEEN",
    "IS NULL",
    "IS NOT NULL",
  ],
  "parametersLength": true,
  "procedureContext": true,
  "procedureContextValues": [
    "IN",
    "OUT",
    "INOUT",
  ],
  "procedureDataAccess": true,
  "procedureDeterministic": true,
  "procedureLanguage": false,
  "procedureSql": "BEGIN

END",
  "processesList": true,
  "readOnlyMode": true,
  "routineAdd": true,
  "routineSettings": true,
  "routines": true,
  "schedulerAdd": true,
  "schedulerSettings": true,
  "schedulers": true,
  "schemaDrop": true,
  "schemaEdit": true,
  "schemaExport": true,
  "schemaImport": true,
  "schemas": true,
  "singleConnectionMode": true,
  "sortableFields": true,
  "sshConnection": true,
  "sslConnection": true,
  "stringsWrapper": """,
  "systemSchemas": [
    "mysql",
    "information_schema",
    "performance_schema",
    "sys",
  ],
  "tableAdd": true,
  "tableArray": false,
  "tableCheck": true,
  "tableDdl": true,
  "tableDuplicate": true,
  "tableRealCount": false,
  "tableSettings": true,
  "tableTruncateDisableFKCheck": true,
  "tables": true,
  "triggerAdd": true,
  "triggerEnableDisable": false,
  "triggerFunctionAdd": false,
  "triggerFunctionSettings": false,
  "triggerFunctionSql": null,
  "triggerFunctionlanguages": null,
  "triggerFunctions": false,
  "triggerMultipleEvents": false,
  "triggerOnlyRename": false,
  "triggerSettings": true,
  "triggerSql": "BEGIN

END",
  "triggerStatementInCreation": false,
  "triggerTableInName": false,
  "triggerUpdateColumns": false,
  "triggers": true,
  "unsigned": true,
  "usersManagement": false,
  "variables": false,
  "viewAdd": true,
  "viewAlgorithm": true,
  "viewSettings": true,
  "viewSqlSecurity": true,
  "viewUpdateOption": true,
  "views": true,
  "zerofill": true,
}
`;

exports[`per-client customization snapshots (.NET contract) > snapshot for mssql 1`] = `
{
  "autoIncrement": true,
  "cancelQueries": true,
  "collation": true,
  "collations": true,
  "comment": true,
  "connectionSchema": false,
  "dataTypes": [
    {
      "group": "integer",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "BIT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "TINYINT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "SMALLINT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "INT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "BIGINT",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "float",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "DECIMAL",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "NUMERIC",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "FLOAT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "REAL",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MONEY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "SMALLMONEY",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "string",
      "types": [
        {
          "collation": true,
          "length": true,
          "name": "CHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "VARCHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "TEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "NCHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "NVARCHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "NTEXT",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "binary",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "BINARY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "VARBINARY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "IMAGE",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "time",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "DATE",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "TIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "DATETIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DATETIME2",
          "scale": true,
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DATETIMEOFFSET",
          "scale": true,
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "SMALLDATETIME",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "other",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "UNIQUEIDENTIFIER",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "XML",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "SQL_VARIANT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "HIERARCHYID",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "GEOGRAPHY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "GEOMETRY",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
  ],
  "database": true,
  "databaseEdit": false,
  "defaultDatabase": "master",
  "defaultPort": 1433,
  "defaultUser": "sa",
  "definer": false,
  "elementsWrapper": "[",
  "elementsWrapperEnd": "]",
  "engines": false,
  "exportByChunks": false,
  "fileConnection": false,
  "foreignActions": [
    "RESTRICT",
    "CASCADE",
    "SET NULL",
    "SET DEFAULT",
    "NO ACTION",
  ],
  "foreigns": true,
  "functionAdd": true,
  "functionContext": false,
  "functionDataAccess": false,
  "functionDeterministic": false,
  "functionLanguage": false,
  "functionSettings": true,
  "functionSql": "T-SQL",
  "functions": true,
  "indexTypes": [
    "PRIMARY",
    "INDEX",
    "UNIQUE",
  ],
  "indexes": true,
  "languages": null,
  "nullable": true,
  "nullablePrimary": false,
  "onUpdate": false,
  "operators": [
    "=",
    "!=",
    ">",
    "<",
    ">=",
    "<=",
    "IN",
    "NOT IN",
    "LIKE",
    "NOT LIKE",
    "BETWEEN",
    "IS NULL",
    "IS NOT NULL",
  ],
  "parametersLength": false,
  "procedureContext": false,
  "procedureContextValues": [],
  "procedureDataAccess": false,
  "procedureDeterministic": false,
  "procedureLanguage": false,
  "procedureSql": "T-SQL",
  "processesList": true,
  "readOnlyMode": true,
  "routineAdd": true,
  "routineSettings": true,
  "routines": true,
  "schedulerAdd": false,
  "schedulerSettings": false,
  "schedulers": false,
  "schemaDrop": false,
  "schemaEdit": false,
  "schemaExport": true,
  "schemaImport": true,
  "schemas": true,
  "singleConnectionMode": true,
  "sortableFields": false,
  "sshConnection": true,
  "sslConnection": true,
  "stringsWrapper": "'",
  "systemSchemas": [
    "master",
    "model",
    "msdb",
    "tempdb",
  ],
  "tableAdd": true,
  "tableArray": false,
  "tableCheck": false,
  "tableDdl": true,
  "tableDuplicate": true,
  "tableRealCount": true,
  "tableSettings": true,
  "tableTruncateDisableFKCheck": false,
  "tables": true,
  "triggerAdd": true,
  "triggerEnableDisable": false,
  "triggerFunctionAdd": false,
  "triggerFunctionSettings": false,
  "triggerFunctionSql": null,
  "triggerFunctionlanguages": null,
  "triggerFunctions": false,
  "triggerMultipleEvents": false,
  "triggerOnlyRename": false,
  "triggerSettings": true,
  "triggerSql": "T-SQL",
  "triggerStatementInCreation": false,
  "triggerTableInName": false,
  "triggerUpdateColumns": false,
  "triggers": true,
  "unsigned": false,
  "usersManagement": false,
  "variables": false,
  "viewAdd": true,
  "viewAlgorithm": false,
  "viewSettings": true,
  "viewSqlSecurity": false,
  "viewUpdateOption": false,
  "views": true,
  "zerofill": false,
}
`;

exports[`per-client customization snapshots (.NET contract) > snapshot for mysql 1`] = `
{
  "autoIncrement": true,
  "cancelQueries": true,
  "collation": true,
  "collations": true,
  "comment": true,
  "connectionSchema": true,
  "dataTypes": [
    {
      "group": "integer",
      "types": [
        {
          "collation": false,
          "length": 4,
          "name": "TINYINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "SMALLINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "INT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "MEDIUMINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "BIGINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "BIT",
          "unsigned": true,
          "zerofill": true,
        },
      ],
    },
    {
      "group": "float",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "FLOAT",
          "scale": true,
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "DOUBLE",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DECIMAL",
          "scale": true,
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "string",
      "types": [
        {
          "collation": true,
          "length": true,
          "name": "CHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "VARCHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "TINYTEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "MEDIUMTEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "TEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": false,
          "name": "LONGTEXT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "JSON",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "binary",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "BINARY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "VARBINARY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "TINYBLOB",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "BLOB",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MEDIUMBLOB",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "LONGBLOB",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "time",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "DATE",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "TIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "YEAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DATETIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "TIMESTAMP",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "spatial",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "POINT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "LINESTRING",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "POLYGON",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "GEOMETRY",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MULTIPOINT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MULTILINESTRING",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "MULTIPOLYGON",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": false,
          "name": "GEOMCOLLECTION",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "other",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "ENUM",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "SET",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "unknown",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "UNKNOWN",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
  ],
  "database": false,
  "databaseEdit": false,
  "defaultDatabase": null,
  "defaultPort": 3306,
  "defaultUser": "root",
  "definer": true,
  "elementsWrapper": "\`",
  "engines": true,
  "exportByChunks": true,
  "fileConnection": false,
  "foreignActions": [
    "RESTRICT",
    "CASCADE",
    "SET NULL",
    "NO ACTION",
  ],
  "foreigns": true,
  "functionAdd": true,
  "functionContext": false,
  "functionDataAccess": true,
  "functionDeterministic": true,
  "functionLanguage": false,
  "functionSettings": true,
  "functionSql": "BEGIN

END",
  "functions": true,
  "indexTypes": [
    "PRIMARY",
    "INDEX",
    "UNIQUE",
    "FULLTEXT",
  ],
  "indexes": true,
  "languages": null,
  "nullable": true,
  "nullablePrimary": false,
  "onUpdate": true,
  "operators": [
    "=",
    "!=",
    ">",
    "<",
    ">=",
    "<=",
    "IN",
    "NOT IN",
    "LIKE",
    "NOT LIKE",
    "RLIKE",
    "NOT RLIKE",
    "BETWEEN",
    "IS NULL",
    "IS NOT NULL",
  ],
  "parametersLength": true,
  "procedureContext": true,
  "procedureContextValues": [
    "IN",
    "OUT",
    "INOUT",
  ],
  "procedureDataAccess": true,
  "procedureDeterministic": true,
  "procedureLanguage": false,
  "procedureSql": "BEGIN

END",
  "processesList": true,
  "readOnlyMode": true,
  "routineAdd": true,
  "routineSettings": true,
  "routines": true,
  "schedulerAdd": true,
  "schedulerSettings": true,
  "schedulers": true,
  "schemaDrop": true,
  "schemaEdit": true,
  "schemaExport": true,
  "schemaImport": true,
  "schemas": true,
  "singleConnectionMode": true,
  "sortableFields": true,
  "sshConnection": true,
  "sslConnection": true,
  "stringsWrapper": """,
  "systemSchemas": [
    "mysql",
    "information_schema",
    "performance_schema",
    "sys",
  ],
  "tableAdd": true,
  "tableArray": false,
  "tableCheck": true,
  "tableDdl": true,
  "tableDuplicate": true,
  "tableRealCount": false,
  "tableSettings": true,
  "tableTruncateDisableFKCheck": true,
  "tables": true,
  "triggerAdd": true,
  "triggerEnableDisable": false,
  "triggerFunctionAdd": false,
  "triggerFunctionSettings": false,
  "triggerFunctionSql": null,
  "triggerFunctionlanguages": null,
  "triggerFunctions": false,
  "triggerMultipleEvents": false,
  "triggerOnlyRename": false,
  "triggerSettings": true,
  "triggerSql": "BEGIN

END",
  "triggerStatementInCreation": false,
  "triggerTableInName": false,
  "triggerUpdateColumns": false,
  "triggers": true,
  "unsigned": true,
  "usersManagement": false,
  "variables": false,
  "viewAdd": true,
  "viewAlgorithm": true,
  "viewSettings": true,
  "viewSqlSecurity": true,
  "viewUpdateOption": true,
  "views": true,
  "zerofill": true,
}
`;

exports[`per-client customization snapshots (.NET contract) > snapshot for pg 1`] = `
{
  "autoIncrement": false,
  "cancelQueries": true,
  "collation": false,
  "collations": false,
  "comment": true,
  "connectionSchema": false,
  "dataTypes": [
    {
      "group": "integer",
      "types": [
        {
          "length": false,
          "name": "SMALLINT",
          "unsigned": true,
        },
        {
          "length": false,
          "name": "INTEGER",
          "unsigned": true,
        },
        {
          "length": false,
          "name": "BIGINT",
          "unsigned": true,
        },
        {
          "length": false,
          "name": "DECIMAL",
          "unsigned": true,
        },
        {
          "length": false,
          "name": "SMALLSERIAL",
          "unsigned": true,
        },
        {
          "length": false,
          "name": "SERIAL",
          "unsigned": true,
        },
        {
          "length": false,
          "name": "BIGSERIAL",
          "unsigned": true,
        },
      ],
    },
    {
      "group": "float",
      "types": [
        {
          "length": false,
          "name": "REAL",
          "unsigned": true,
        },
        {
          "length": true,
          "name": "NUMERIC",
          "scale": true,
          "unsigned": true,
        },
        {
          "length": false,
          "name": "DOUBLE PRECISION",
          "unsigned": true,
        },
      ],
    },
    {
      "group": "monetary",
      "types": [
        {
          "length": false,
          "name": "MONEY",
          "unsigned": true,
        },
      ],
    },
    {
      "group": "string",
      "types": [
        {
          "length": true,
          "name": "CHARACTER VARYING",
          "unsigned": false,
        },
        {
          "length": true,
          "name": "CHARACTER",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "TEXT",
          "unsigned": false,
        },
        {
          "length": false,
          "name": ""CHAR"",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "NAME",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "binary",
      "types": [
        {
          "length": false,
          "name": "BYTEA",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "time",
      "types": [
        {
          "length": false,
          "name": "TIMESTAMP WITHOUT TIME ZONE",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "TIMESTAMP WITH TIME ZONE",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "DATE",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "TIME WITHOUT TIME ZONE",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "TIME WITH TIME ZONE",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "INTERVAL",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "boolean",
      "types": [
        {
          "length": false,
          "name": "BOOLEAN",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "geometric",
      "types": [
        {
          "length": false,
          "name": "POINT",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "LINE",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "LSEG",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "BOX",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "PATH",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "POLYGON",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "CIRCLE",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "network",
      "types": [
        {
          "length": false,
          "name": "CIDR",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "INET",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "MACADDR",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "MACADDR8",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "bit",
      "types": [
        {
          "length": true,
          "name": "BIT",
          "unsigned": false,
        },
        {
          "length": true,
          "name": "BIT VARYING",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "text search",
      "types": [
        {
          "length": false,
          "name": "TSVECTOR",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "TSQUERY",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "uuid",
      "types": [
        {
          "length": false,
          "name": "UUID",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "xml",
      "types": [
        {
          "length": false,
          "name": "XML",
          "unsigned": false,
        },
      ],
    },
    {
      "group": "json",
      "types": [
        {
          "length": false,
          "name": "JSON",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "JSONB",
          "unsigned": false,
        },
        {
          "length": false,
          "name": "JSONPATH",
          "unsigned": false,
        },
      ],
    },
  ],
  "database": true,
  "databaseEdit": false,
  "defaultDatabase": "postgres",
  "defaultPort": 5432,
  "defaultUser": "postgres",
  "definer": false,
  "elementsWrapper": """,
  "engines": false,
  "exportByChunks": false,
  "fileConnection": false,
  "foreignActions": [
    "RESTRICT",
    "CASCADE",
    "SET NULL",
    "NO ACTION",
  ],
  "foreigns": true,
  "functionAdd": true,
  "functionContext": true,
  "functionDataAccess": false,
  "functionDeterministic": false,
  "functionLanguage": true,
  "functionSettings": true,
  "functionSql": "$function$

$function$",
  "functions": true,
  "indexTypes": [
    "PRIMARY",
    "INDEX",
    "UNIQUE",
  ],
  "indexes": true,
  "languages": [
    "sql",
    "plpgsql",
    "c",
    "internal",
  ],
  "materializedViewAdd": true,
  "materializedViewSettings": true,
  "materializedViews": true,
  "nullable": true,
  "nullablePrimary": false,
  "onUpdate": false,
  "operators": [
    "=",
    "!=",
    ">",
    "<",
    ">=",
    "<=",
    "IN",
    "NOT IN",
    "LIKE",
    "NOT LIKE",
    "BETWEEN",
    "IS NULL",
    "IS NOT NULL",
  ],
  "parametersLength": false,
  "procedureContext": true,
  "procedureContextValues": [
    "IN",
    "OUT",
    "INOUT",
  ],
  "procedureDataAccess": false,
  "procedureDeterministic": false,
  "procedureLanguage": true,
  "procedureSql": "$procedure$

$procedure$",
  "processesList": true,
  "readOnlyMode": true,
  "routineAdd": true,
  "routineSettings": true,
  "routines": true,
  "schedulerAdd": false,
  "schedulerSettings": false,
  "schedulers": false,
  "schemaDrop": true,
  "schemaEdit": false,
  "schemaExport": true,
  "schemaImport": true,
  "schemas": true,
  "singleConnectionMode": false,
  "sortableFields": false,
  "sshConnection": true,
  "sslConnection": true,
  "stringsWrapper": "'",
  "systemSchemas": [
    "postgres",
    "template0",
    "template1",
  ],
  "tableAdd": true,
  "tableArray": true,
  "tableCheck": false,
  "tableDdl": true,
  "tableDuplicate": true,
  "tableRealCount": false,
  "tableSettings": true,
  "tableTruncateDisableFKCheck": false,
  "tables": true,
  "triggerAdd": true,
  "triggerEnableDisable": true,
  "triggerFunctionAdd": true,
  "triggerFunctionSettings": true,
  "triggerFunctionSql": "$function$
BEGIN

END
$function$",
  "triggerFunctionlanguages": [
    "plpgsql",
  ],
  "triggerFunctions": true,
  "triggerMultipleEvents": true,
  "triggerOnlyRename": false,
  "triggerSettings": true,
  "triggerSql": "EXECUTE PROCEDURE ",
  "triggerStatementInCreation": true,
  "triggerTableInName": true,
  "triggerUpdateColumns": false,
  "triggers": true,
  "unsigned": false,
  "usersManagement": false,
  "variables": false,
  "viewAdd": true,
  "viewAlgorithm": false,
  "viewSettings": true,
  "viewSqlSecurity": false,
  "viewUpdateOption": false,
  "views": true,
  "zerofill": false,
}
`;

exports[`per-client customization snapshots (.NET contract) > snapshot for sqlite 1`] = `
{
  "autoIncrement": false,
  "cancelQueries": false,
  "collation": false,
  "collations": false,
  "comment": false,
  "connectionSchema": false,
  "dataTypes": [
    {
      "group": "integer",
      "types": [
        {
          "collation": false,
          "length": 10,
          "name": "INT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "INTEGER",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "INTEGER UNSIGNED",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "BIGINT",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": true,
          "name": "NUMERIC",
          "unsigned": true,
          "zerofill": true,
        },
        {
          "collation": false,
          "length": false,
          "name": "BOOLEAN",
          "unsigned": true,
          "zerofill": true,
        },
      ],
    },
    {
      "group": "float",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "FLOAT",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "REAL",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "string",
      "types": [
        {
          "collation": true,
          "length": true,
          "name": "CHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "VARCHAR",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": true,
          "length": true,
          "name": "TEXT",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "binary",
      "types": [
        {
          "collation": false,
          "length": true,
          "name": "BLOB",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "time",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "DATE",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "TIME",
          "unsigned": false,
          "zerofill": false,
        },
        {
          "collation": false,
          "length": true,
          "name": "DATETIME",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
    {
      "group": "other",
      "types": [
        {
          "collation": false,
          "length": false,
          "name": "NONE",
          "unsigned": false,
          "zerofill": false,
        },
      ],
    },
  ],
  "database": false,
  "databaseEdit": false,
  "defaultDatabase": null,
  "defaultPort": null,
  "defaultUser": null,
  "definer": false,
  "elementsWrapper": """,
  "engines": false,
  "exportByChunks": false,
  "fileConnection": true,
  "foreignActions": [
    "RESTRICT",
    "CASCADE",
    "SET NULL",
    "NO ACTION",
  ],
  "foreigns": true,
  "functionAdd": false,
  "functionContext": false,
  "functionDataAccess": false,
  "functionDeterministic": false,
  "functionLanguage": false,
  "functionSettings": false,
  "functionSql": null,
  "functions": false,
  "indexTypes": [
    "PRIMARY",
    "INDEX",
    "UNIQUE",
  ],
  "indexes": true,
  "languages": null,
  "nullable": true,
  "nullablePrimary": true,
  "onUpdate": false,
  "operators": [
    "=",
    "!=",
    ">",
    "<",
    ">=",
    "<=",
    "IN",
    "NOT IN",
    "LIKE",
    "NOT LIKE",
    "BETWEEN",
    "IS NULL",
    "IS NOT NULL",
  ],
  "parametersLength": false,
  "procedureContext": false,
  "procedureContextValues": [],
  "procedureDataAccess": false,
  "procedureDeterministic": false,
  "procedureLanguage": false,
  "procedureSql": null,
  "processesList": false,
  "readOnlyMode": true,
  "routineAdd": false,
  "routineSettings": false,
  "routines": false,
  "schedulerAdd": false,
  "schedulerSettings": false,
  "schedulers": false,
  "schemaDrop": false,
  "schemaEdit": false,
  "schemaExport": false,
  "schemaImport": false,
  "schemas": false,
  "singleConnectionMode": false,
  "sortableFields": false,
  "sshConnection": false,
  "sslConnection": false,
  "stringsWrapper": "'",
  "systemSchemas": [],
  "tableAdd": true,
  "tableArray": false,
  "tableCheck": false,
  "tableDdl": false,
  "tableDuplicate": true,
  "tableRealCount": true,
  "tableSettings": true,
  "tableTruncateDisableFKCheck": false,
  "tables": true,
  "triggerAdd": true,
  "triggerEnableDisable": false,
  "triggerFunctionAdd": false,
  "triggerFunctionSettings": false,
  "triggerFunctionSql": null,
  "triggerFunctionlanguages": null,
  "triggerFunctions": false,
  "triggerMultipleEvents": false,
  "triggerOnlyRename": false,
  "triggerSettings": true,
  "triggerSql": "BEGIN

END",
  "triggerStatementInCreation": false,
  "triggerTableInName": false,
  "triggerUpdateColumns": false,
  "triggers": true,
  "unsigned": false,
  "usersManagement": false,
  "variables": false,
  "viewAdd": true,
  "viewAlgorithm": false,
  "viewSettings": true,
  "viewSqlSecurity": false,
  "viewUpdateOption": false,
  "views": true,
  "zerofill": false,
}
`;
